--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,6 +39,9 @@
                 <header class="major">
                     <h2>Vision & Mission</h2>
                 </header>
+                <span class="image">
+                    <img src="assets/images/MissionVision.jpeg" />
+                </span>
                 <p>{{ content }}</p>
                 <ul class="actions">
                     <li><a href="landing.html" class="button next">Get Started</a></li>
