--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
                     <h2>Vision & Mission</h2>
                 </header>
                 <span class="image">
-                    <img src="assets/images/MissionVision.jpeg" />
+                    <img src="assets/images/MissionVision.png" />
                 </span>
                 <p>{{ content }}</p>
                 <ul class="actions">
